Rydding i kodeverk (#714)
* Mottaker_type til enum - rydder i simulering_mottaker tabellen.

* Betaling type til enum

* Oppdatert SimulerPostering - postering type til enum

* Rydder i simulering resultat og xml.

* Ryddet en del i databasen og appen.